k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: watchmen
  labels:
    app.kubernetes.io/name: watchmen
